--- a/style.css
+++ b/style.css
@@ -13,19 +13,21 @@
 
 
 
-html{
+html {
     /*   *****   Storing Colors In Variables   *****  */
     --body-clr: #f6f9fe;
-    --primary-clr: #05555c;
+    --secondary-clr: #05555c;
     --primary-light-clr: #eaf3fa;
     --links-clr: #186f78;
     --text-clr: #3f7277;
-  }
+    --primary-bg: #FAFAF1;
+    --text-primary: #5A5A5A;
+}
 
 
 
 
-  
+
 body,
 h1,
 h2,
@@ -104,7 +106,21 @@ li {
 }
 
 header {
-    background-color: #95ffa2;
+    
+    transition: top 0.3s;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: transparent;
+    transition: background-color 0.5s, color 0.5s; /* Thêm hiệu ứng transition cho màu nền và màu chữ */
+
+}
+
+.bg-secondary {
+    background-color: var(--secondary-clr);
+    color: white;
+    z-index: 1000;
 }
 
 section {
@@ -114,7 +130,7 @@ section {
 .header-middle {
     display: flex;
     justify-content: space-between;
-    padding: 1em 0;
+    padding: 0.75em 0;
 }
 
 .header-middle .menu ul {
@@ -142,11 +158,11 @@ section {
 }
 
 .banner {
-    background-color: #FAFAF1;
+    background-color: var(--primary-bg);
 }
 
 .banner-content .banner-content-left span {
-    color: #f94626;
+    color: var(--secondary-clr);
     font-size: 1.5em;
 }
 
@@ -162,7 +178,9 @@ section {
     margin-top: 2em;
     display: block;
     max-width: 170px;
-    background-color: #f94626;
+    /* background-color: #f94626; */
+    background-color: var(--secondary-clr);
+
     border-radius: 8px;
     color: white;
     text-align: center;
@@ -183,11 +201,13 @@ section {
 
 .about .about-content .description {
     margin-top: 1em;
+    font-size: 0.9em;
+    color: var(--text-primary);
 
 }
 
 .services {
-    background-color: #FAFAF1;
+    background-color: var(--primary-bg);
     padding: 2em 1em;
 }
 
@@ -210,6 +230,8 @@ section {
 
 .services .services-item {
     background-color: white;
+    box-shadow: 0 10px 15px #cfcfcf;
+
     border-radius: 12px;
     padding: 2em;
     min-height: 150px;
@@ -239,6 +261,12 @@ section {
 .services .services-item-content span {
     margin-bottom: 0.5em;
     display: block;
+
+}
+
+.services .services-item-content p {
+    font-size: 0.9em;
+    color: var(--text-primary);
 }
 
 
@@ -281,32 +309,38 @@ section {
 
 
 
-.portfolio{
+.portfolio {
     width: 100%;
     padding: 30px 8%;
+    min-height: 1000px;
     /* background-color: var(--body-clr); */
-  }
-  .portfolio .section-head{
+}
+
+
+.portfolio .section-head {
     max-width: 700px;
     margin: 0px auto 25px;
     text-align: center;
-  }
-  .section-head h1{
+}
+
+.section-head h1 {
     position: relative;
     font-size: 32px;
     margin: 10px 0px 30px;
-    color: var(--primary-clr);
-  }
-  .button-group{
+    color: var(--secondary-clr);
+}
+
+.button-group {
     text-align: center;
     margin-bottom: 40px;
-  }
-  .button-group .button{
+}
+
+.button-group .button {
     display: inline-block;
     padding: 10px 20px;
     margin: 5px;
     background-color: #c8d1d8;
-    color: var(--primary-clr);
+    color: var(--secondary-clr);
     font-style: 12px;
     font-weight: 800;
     text-transform: uppercase;
@@ -316,38 +350,45 @@ section {
     border-radius: 5px;
     outline: none;
     cursor: pointer;
-  }
-  .button-group .button.active{
-    background-color: var(--primary-clr);
+}
+
+.button-group .button.active {
+    background-color: var(--secondary-clr);
     color: var(--body-clr);
-  }
-  .button-group .button:hover{
-    background-color: var(--primary-clr);
+}
+
+.button-group .button:hover {
+    background-color: var(--secondary-clr);
     color: var(--body-clr);
-  }
-  div.gallery{
+}
+
+.gallery {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-  }
-  div.gallery .item{
+}
+
+.gallery .item {
     position: relative;
     margin: 4px;
     width: calc(33.33% - 8px);
     overflow: hidden;
     cursor: pointer;
-  }
-  .item img{
+}
+
+.item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
     transition: 0.3s;
-  }
-  div.gallery .item:hover img{
+}
+
+.gallery .item:hover img {
     transform: scale(1.15);
-  }
-  .item .overlay{
+}
+
+.item .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -356,17 +397,19 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(5,85,92,0.7);
+    background-color: rgba(5, 85, 92, 0.7);
     color: var(--body-clr);
     padding: 15px;
     overflow: hidden;
     transition: opacity 0.2s ease-in-out;
     opacity: 0;
-  }
-  .item:hover .overlay{
+}
+
+.item:hover .overlay {
     opacity: 1;
-  }
-  .item .overlay a{
+}
+
+.item .overlay a {
     display: inline-block;
     padding: 8px 16px;
     border: 2px solid var(--body-clr);
@@ -374,22 +417,285 @@ section {
     text-decoration: none;
     font-size: 14px;
     transition: 0.3s;
-  }
-  .item .overlay a:hover{
+}
+
+.item .overlay a:hover {
     background-color: var(--body-clr);
-    color: var(--primary-clr);
-  }
-  
-  
-  @media(max-width: 1024px){
-    div.gallery .item{
-      width: calc(50% - 8px);
+    color: var(--secondary-clr);
+}
+
+
+@media(max-width: 1024px) {
+    .gallery .item {
+        width: calc(50% - 8px);
     }
-  }
-  
-  @media(max-width: 600px){
-    div.gallery .item{
-      width: 100%;
-      margin: 4px 0px;
+}
+
+@media(max-width: 600px) {
+    .gallery .item {
+        width: 100%;
+        margin: 4px 0px;
     }
-  }
+}
+
+
+
+
+
+.feedback {
+    background-color: var(--primary-bg);
+    padding: 3em 0;
+}
+
+.feedback h3 {
+    font-size: 2em;
+    text-align: center;
+}
+
+.feedback .content p {
+    font-size: 0.9em;
+    color: var(--text-primary);
+}
+
+
+.feedback .derection {
+    display: flex;
+    justify-content: center;
+}
+
+.feedback .derection button {
+    font-family: cursive;
+    font-weight: bold;
+    background-color: #c8d1d8;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: 0.5s;
+    margin: 0 10px;
+    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: var(--secondary-clr);
+}
+
+.feedback .derection button:hover {
+    background-color: var(--secondary-clr);
+    color: white;
+}
+
+.feedback .feedback-item {
+    border-radius: 15px;
+    width: 300px;
+    height: 450px;
+    background-color: white;
+    box-shadow: 0 10px 15px #cfcfcf;
+
+    /* background-image: linear-gradient(to top, #baf9cf, #d6d6d6); */
+    overflow: hidden;
+    transition: 0.5s;
+    margin: 10px;
+    scroll-snap-type: start;
+
+}
+
+.feedback .feedback-item .avatar {
+    display: block;
+    margin: 50px auto 10px;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 10px 15px #8a8a8a;
+
+}
+
+.feedback .content {
+    padding: 30px;
+    font-family: monospace;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+
+}
+
+.feedback .content .name {
+
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    margin-bottom: 1em;
+
+}
+
+#list {
+    display: flex;
+    width: max-content;
+}
+
+#form-list {
+    width: 1280px;
+    max-width: 100%;
+    overflow: auto;
+    margin: 50px auto;
+    scroll-behavior: smooth;
+    scroll-snap-type: both;
+    padding: 10px 0;
+    /* hieu ung keo tren mobile */
+}
+
+#form-list::-webkit-scrollbar {
+    display: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .feedback .feedback-item {
+        width: calc(33.3vw - 20px);
+    }
+
+    .derection {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .feedback .feedback-item {
+        width: calc(50vw - 20px);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+.contact {
+    padding: 1em;
+}
+
+
+.contact h3 {
+    font-size: 2em;
+    text-align: center;
+
+}
+
+.contact .contact-form {
+    padding: 2em;
+}
+
+.contact .contact-form span {
+    font-size: 0.9em;
+    color: var(--text-primary);
+}
+
+.contact input {
+    width: 100%;
+    padding: 1em;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+}
+
+.contact textarea {
+    width: 100%;
+    padding: 1em;
+    height: 100px;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+}
+
+.contact .title {
+    font-size: 0.8em;
+    color: var(--text-primary);
+}
+
+.contact h4 {
+    font-size: 1.3em;
+    margin-bottom: 1em;
+}
+
+.contact .contact-content {
+    padding: 2em;
+}
+
+.contact .contact-content-item {
+    padding: 1em 0;
+    border-bottom: 1px solid #f3f3f3;
+
+}
+
+.contact .contact-content-item span {
+    margin-top: 0.5em;
+    display: block;
+    font-size: 1.1em;
+}
+
+.contact .btn-group {
+    margin-top: 1em;
+}
+
+.contact .btns {
+    margin-top: 1em;
+    display: flex;
+}
+
+.contact .btn-link {
+    margin-left: 1em;
+}
+
+.contact .btn-link a {
+    font-size: 1.5em;
+    color: var(--secondary-clr);
+}
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: var(--secondary-clr);
+    padding: 0.75em;
+    color: white;
+    font-size: 0.8em;
+    text-align: center;
+}
+
+
+
+
+#scroll-top-btn {
+    border: none;
+    background-color: var(--secondary-clr);
+    color: white;
+    padding: 0.5em;
+    border-radius: 3px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    display: none;
+    cursor: pointer;
+}
+
+.animate {
+    transform: translateY(30%);
+    transition: 1s;
+}
+
+.show-animate .animate{
+    transform: translateY(0);
+
+}
