--- a/style.css
+++ b/style.css
@@ -61,6 +61,14 @@ li {
     padding: 5px;
 }
 
+.col-5 {
+    width: 45%;
+}
+
+.col-7 {
+    width: 55%;
+}
+
 .col-6 {
     width: 50%;
 }
@@ -82,7 +90,7 @@ li {
 }
 
 @media screen and (max-width: 1024px) {
-    .col-3, .col-4, .col-6 ,.col-9{
+    .col-3, .col-4, .col-6 ,.col-9, .col-5, .col-7{
         width: 100%;
     }
 
@@ -541,6 +549,7 @@ nav ul {
     width: calc(33.33% - 8px);
     overflow: hidden;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .item img {
@@ -894,11 +903,34 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
     transition: 0.3s;
+    position: relative;
 }
+
+
+.my-projects .btn-group {
+    position: absolute;
+    right: -200px;
+    bottom: 0;
+    width: 300px;
+    height: 100%;
+    background-color: #3f7277;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 45% 100%);
+
+}
+
+
+
+
+
 
 .my-projects .my-project-item:hover {
     transform: scale(1.05);
 }
+
+.my-projects .my-project-item:hover ~ .my-projects .btn-group {
+    right: 0 !important;
+}
+
 
 .my-projects .my-project-items{
     display: flex;
